fix lr scheduler

--- a/debug.ipynb
+++ b/debug.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mbv3"
+    "len(mbv3.features)"
    ]
   },
   {
@@ -54,7 +54,7 @@
    "source": [
     "sampleinput = torch.randn(1, 3, 224, 224)\n",
     "out = sampleinput\n",
-    "for feat in mbv2.features:\n",
+    "for feat in mbv3.features:\n",
     "    out = feat(out)\n",
     "    print(out.shape)"
    ]
@@ -66,7 +66,7 @@
    "outputs": [],
    "source": [
     "import easydict\n",
-    "from portrain_net_mobilenetv2 import Encoder, PortrainNet"
+    "from model.portrain_net_mobilenetv2 import Encoder, PortrainNet"
    ]
   },
   {
